--- a/src/main/resources/static/style/view.css
+++ b/src/main/resources/static/style/view.css
@@ -11,7 +11,7 @@ section {
 table {
     border: 1px solid white;
     border-collapse: collapse;
-    width: 90%; /*https://aboooks.tistory.com/93*/
+    width: 88%; /*https://aboooks.tistory.com/93*/
 	height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -28,8 +28,8 @@ table tr {
 
 table tr td {
 	border: 1px solid white;
-	width: 30%;
-    padding: 10px 20px;
+	width: 22%;
+    padding: 30px 30px;
     
 }
 .main_img {
@@ -77,4 +77,8 @@ a{
 .section {
     margin-bottom: 70px;
     
+}
+#paging{
+	text-align:center;
+	padding: 5% 0;
 }
