--- a/src/main/resources/static/style/view.css
+++ b/src/main/resources/static/style/view.css
@@ -29,6 +29,7 @@ table tr {
 table tr td {
 	border: 1px solid white;
 	width: 22%;
+	height:100%;
     padding: 30px 30px;
     
 }
@@ -45,11 +46,18 @@ table tr td {
     margin-right: auto;
 }
 
+.contain_div { /*웹프 기초 200p*/
+	width: 100%;
+	height: 100%;
+}
+
 .img_div {
     width: 100%;
     height: 200px;
     text-align: center;
 }
+
+
 .content {
     padding-left: 20px; 
     padding-right: 20px; 
@@ -74,11 +82,20 @@ a{
 /*.heart {
     z-index: 100;
 }*/
+
+
 .section {
     margin-bottom: 70px;
     
 }
+
+/*EarringItem.jsp_추가*/
 #paging{
 	text-align:center;
 	padding: 5% 0;
+}
+#sortSelect {
+	float: right;
+	margin-top: 5%;
+	margin-right: 3%;
 }
